improve dx on vscode settings profile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-	"workbench.editor.labelFormat": "short"
+	"workbench.editor.labelFormat": "short",
+	"explorer.sortOrder": "filesFirst",
+	"explorer.compactFolders": false
 }
