--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@playwright/test": "^1.28.1",
 		"@skeletonlabs/skeleton": "^0.80.9",
 		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-static": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.8",
@@ -28,6 +29,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"gh-pages": "^4.0.0",
 		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.0",
