--- a/package.json
+++ b/package.json
@@ -15,33 +15,35 @@
 		"clean": "rm -rf .svelte-kit .vercel_build_output build node_modules"
 	},
 	"devDependencies": {
-		"@iconify/svelte": "^3.0.1",
-		"@playwright/test": "^1.28.1",
-		"@skeletonlabs/skeleton": "^0.80.9",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/adapter-static": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.8",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"gh-pages": "^4.0.0",
-		"mdsvex": "^0.10.6",
-		"postcss": "^8.4.20",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"svelte-preprocess": "^5.0.0",
-		"tailwindcss": "^3.2.4",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"vitest": "^0.25.3"
+		"@iconify/svelte": "^3.1.4",
+		"@playwright/test": "^1.38.1",
+		"@skeletonlabs/skeleton": "2.1.0",
+		"@skeletonlabs/tw-plugin": "0.2.0",
+		"@sveltejs/adapter-vercel": "^3.0.3",
+		"@sveltejs/kit": "^1.25.0",
+		"@tailwindcss/forms": "^0.5.6",
+		"@tailwindcss/typography": "^0.5.10",
+		"@types/node": "^20.6.4",
+		"@typescript-eslint/eslint-plugin": "^6.7.2",
+		"@typescript-eslint/parser": "^6.7.2",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.50.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.33.2",
+		"gh-pages": "^6.0.0",
+		"mdsvex": "^0.11.0",
+		"postcss": "^8.4.30",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"svelte-preprocess": "^5.0.4",
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9",
+		"vite-plugin-tailwind-purgecss": "^0.1.3",
+		"vitest": "^0.34.5"
 	},
 	"type": "module"
 }
