--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
 		"@sveltejs/kit": "^1.25.1",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
-		"@types/node": "^20.8.2",
+		"@types/node": "^20.8.3",
 		"@typescript-eslint/eslint-plugin": "^6.7.4",
 		"@typescript-eslint/parser": "^6.7.4",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.50.0",
+		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.34.0",
 		"gh-pages": "^6.0.0",
@@ -35,13 +35,17 @@
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
+		"rehype-autolink-headings": "^7.0.0",
+		"rehype-highlight": "^7.0.0",
+		"rehype-slug": "^6.0.0",
+		"remark-heading-id": "^1.0.1",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.10",
+		"vite": "^4.4.11",
 		"vite-plugin-tailwind-purgecss": "^0.1.3",
 		"vitest": "^0.34.6"
 	},
