upgrade packages version and migrate to Svelte5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"workbench.editor.labelFormat": "short",
 	"explorer.sortOrder": "filesFirst",
-	"explorer.compactFolders": false
+	"explorer.compactFolders": false,
+	"circleci.persistedProjectSelection": []
 }
