--- a/package.json
+++ b/package.json
@@ -15,39 +15,43 @@
 		"clean": "rm -rf .svelte-kit .vercel_build_output build node_modules"
 	},
 	"devDependencies": {
-		"@iconify/svelte": "^4.0.2",
-		"@playwright/test": "^1.44.1",
-		"@skeletonlabs/skeleton": "2.10.0",
+		"@iconify/svelte": "^4.1.0",
+		"@playwright/test": "^1.49.0",
+		"@skeletonlabs/skeleton": "2.10.3",
 		"@skeletonlabs/tw-plugin": "0.4.0",
-		"@sveltejs/adapter-vercel": "^5.3.0",
-		"@sveltejs/kit": "^2.5.10",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@tailwindcss/forms": "^0.5.7",
-		"@tailwindcss/typography": "^0.5.13",
-		"@types/node": "^20.12.12",
-		"@typescript-eslint/eslint-plugin": "^7.10.0",
-		"@typescript-eslint/parser": "^7.10.0",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
+		"@sveltejs/adapter-vercel": "^5.5.0",
+		"@sveltejs/kit": "^2.9.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/node": "^22.10.1",
+		"@typescript-eslint/eslint-plugin": "^8.17.0",
+		"@typescript-eslint/parser": "^8.17.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.16.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.0",
-		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.38",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
+		"eslint-plugin-svelte": "^2.46.1",
+		"gh-pages": "^6.2.0",
+		"mdsvex": "^0.12.3",
+		"postcss": "^8.4.49",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.2",
 		"rehype-autolink-headings": "^7.1.0",
-		"rehype-highlight": "^7.0.0",
+		"rehype-highlight": "^7.0.1",
 		"rehype-slug": "^6.0.0",
 		"remark-heading-id": "^1.0.1",
-		"svelte": "^4.2.17",
-		"svelte-check": "^3.7.1",
-		"svelte-preprocess": "^5.1.4",
-		"tailwindcss": "^3.4.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.11",
-		"vite-plugin-tailwind-purgecss": "^0.3.3",
-		"vitest": "^1.6.0"
+		"svelte": "^5.8.1",
+		"svelte-check": "^4.1.1",
+		"svelte-preprocess": "^6.0.3",
+		"tailwindcss": "^3.4.16",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"vite": "^6.0.3",
+		"vite-plugin-tailwind-purgecss": "^0.3.5",
+		"vitest": "^2.1.8"
+	},
+	"peerDependencies": {
+		"@sveltejs/vite-plugin-svelte": "^5.0.0"
 	},
 	"volta": {
 		"node": "20.8.0"
