--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 	"devDependencies": {
 		"@iconify/svelte": "^4.1.0",
 		"@playwright/test": "^1.49.0",
-		"@skeletonlabs/skeleton": "2.10.3",
-		"@skeletonlabs/tw-plugin": "0.4.0",
+		"@skeletonlabs/skeleton": "3.0.0-next.9",
+		"@skeletonlabs/skeleton-svelte": "1.0.0-next.15",
 		"@sveltejs/adapter-vercel": "^5.5.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.1",
