--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"format": "prettier --plugin-search-dir --write './src/**/*.{js,ts,postcss,css,md,json,svelte,html}'",
 		"clean": "rm -rf .svelte-kit .vercel_build_output build node_modules"
 	},
+	"dependencies": {
+		"shiki": "^1.24.0"
+	},
 	"devDependencies": {
 		"@iconify/svelte": "^4.1.0",
 		"@playwright/test": "^1.49.0",
