--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "IDX.aI.enableInlineCompletion": true,
+    "IDX.aI.enableCodebaseIndexing": true,
+    "terminal.integrated.defaultProfile.linux": "fish",
 	"workbench.editor.labelFormat": "short",
 	"explorer.sortOrder": "filesFirst",
 	"explorer.compactFolders": false,
