--- a/package.json
+++ b/package.json
@@ -1,63 +1,58 @@
 {
 	"name": "natta-santa-blog",
-	"version": "0.0.1",
 	"private": true,
+	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"test": "playwright test",
+		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir --write './src/**/*.{js,ts,postcss,css,md,json,svelte,html}'",
-		"clean": "rm -rf .svelte-kit .vercel_build_output build node_modules"
-	},
-	"dependencies": {
-		"shiki": "^1.29.1"
+		"test": "npm run test:unit -- --run && npm run test:e2e",
+		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
-		"@iconify/svelte": "^4.2.0",
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@iconify/svelte": "^5.0.0",
 		"@playwright/test": "^1.49.1",
-		"@skeletonlabs/skeleton": "3.0.0-next.9",
-		"@skeletonlabs/skeleton-svelte": "1.0.0-next.15",
-		"@sveltejs/adapter-vercel": "^5.5.3",
-		"@sveltejs/kit": "^2.16.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
-		"@types/node": "^22.10.9",
-		"@typescript-eslint/eslint-plugin": "^8.21.0",
-		"@typescript-eslint/parser": "^8.21.0",
-		"autoprefixer": "^10.4.20",
+		"@skeletonlabs/skeleton": "^3.1.3",
+		"@skeletonlabs/skeleton-svelte": "^1.2.1",
+		"@sveltejs/adapter-vercel": "^5.6.3",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/vite": "^4.0.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^5.2.4",
 		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.1",
-		"gh-pages": "^6.3.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
+		"jsdom": "^26.0.0",
 		"mdsvex": "^0.12.3",
-		"postcss": "^8.5.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"rehype-autolink-headings": "^7.1.0",
-		"rehype-highlight": "^7.0.1",
-		"rehype-slug": "^6.0.0",
-		"remark-heading-id": "^1.0.1",
-		"svelte": "^5.19.2",
-		"svelte-check": "^4.1.4",
-		"svelte-preprocess": "^6.0.3",
-		"tailwindcss": "^3.4.17",
-		"tslib": "^2.8.1",
-		"typescript": "^5.7.3",
-		"vite": "^6.0.11",
-		"vite-plugin-tailwind-purgecss": "^0.3.5",
-		"vitest": "^2.1.8"
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"shiki": "^1.29.1",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^6.2.6",
+		"vitest": "^3.0.0"
 	},
-	"peerDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^5.0.0"
-	},
-	"volta": {
-		"node": "23.3.0"
-	},
-	"type": "module"
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"@tailwindcss/oxide",
+			"esbuild"
+		]
+	}
 }
