--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
 	"workbench.editor.labelFormat": "short",
 	"explorer.sortOrder": "filesFirst",
 	"explorer.compactFolders": false,
-	"circleci.persistedProjectSelection": []
+	"circleci.persistedProjectSelection": [],
+	"terminal.integrated.defaultProfile.linux": "fish",
+	"css.customData": [".vscode/tailwind.json"],
+	"css.lint.unknownAtRules": "ignore",
+	"editor.wordWrap": "on"
 }
