--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,23 @@
-nginx
 events {
-  worker_connections 1024;
+    worker_connections 1024;
 }
 
 http {
-  server {
-    listen 80;
-    server_name your_domain.com; # Replace with your domain name or VPS IP address
-
-    location / {
-      proxy_pass http://svelte_app:3000;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+    upstream app_servers {
+        server blog_app:3000;
     }
-  }
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            proxy_pass http://app_servers;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
 }
