--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@playwright/test": "^1.52.0",
 		"@skeletonlabs/skeleton": "^3.1.3",
 		"@skeletonlabs/skeleton-svelte": "^1.2.1",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.21.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -58,8 +59,5 @@
 			"@tailwindcss/oxide",
 			"esbuild"
 		]
-	},
-	"dependencies": {
-		"@sveltejs/adapter-node": "^5.2.12"
 	}
 }
