--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -3,5 +3,6 @@
 // For a full list of overridable settings, and general information on folder-specific settings,
 // see the documentation: https://zed.dev/docs/configuring-zed#settings-files
 {
-	"soft_wrap": "editor_width"
+	"soft_wrap": "editor_width",
+	"autosave": "on_focus_change"
 }
