--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.7",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/svelte": "^5.2.7",
-		"@types/node": "^22.15.19",
+		"@testing-library/svelte": "^5.2.8",
+		"@types/node": "^22.15.21",
+		"bits-ui": "^1.5.3",
 		"eslint": "^9.27.0",
 		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-svelte": "^3.8.1",
-		"flexsearch": "^0.8.167",
+		"eslint-plugin-svelte": "^3.9.0",
+		"flexsearch": "^0.8.201",
 		"globals": "^16.1.0",
+		"gray-matter": "^4.0.3",
 		"jsdom": "^26.1.0",
 		"mdsvex": "^0.12.6",
 		"prettier": "^3.5.3",
@@ -47,13 +49,15 @@
 		"rehype-slug": "^6.0.0",
 		"remark-heading-id": "^1.0.1",
 		"shiki": "^3.4.2",
-		"svelte": "^5.30.2",
+		"svelte": "^5.32.1",
 		"svelte-check": "^4.2.1",
+		"tailwind-scrollbar": "^4.0.2",
 		"tailwindcss": "^4.1.7",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
-		"vitest": "^3.1.3"
+		"vitest": "^3.1.4"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
