--- a/package.json
+++ b/package.json
@@ -19,43 +19,26 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.9",
 		"@eslint/js": "^9.27.0",
-		"@iconify/svelte": "^5.0.0",
 		"@playwright/test": "^1.52.0",
-		"@skeletonlabs/skeleton": "^3.1.3",
-		"@skeletonlabs/skeleton-svelte": "^1.2.3",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
-		"@tailwindcss/vite": "^4.1.7",
+		"@tailwindcss/vite": "^4.1.8",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.8",
-		"@types/node": "^22.15.21",
-		"bits-ui": "^1.7.0",
+		"@types/node": "^22.15.24",
 		"eslint": "^9.27.0",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-svelte": "^3.9.0",
-		"flexsearch": "^0.8.202",
-		"globals": "^16.1.0",
-		"gray-matter": "^4.0.3",
+		"globals": "^16.2.0",
 		"jsdom": "^26.1.0",
-		"mdsvex": "^0.12.6",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"rehype-autolink-headings": "^7.1.0",
-		"rehype-slug": "^6.0.0",
-		"remark-heading-id": "^1.0.1",
-		"shiki": "^3.4.2",
-		"svelte": "^5.33.1",
 		"svelte-check": "^4.2.1",
-		"tailwind-scrollbar": "^4.0.2",
-		"tailwindcss": "^4.1.7",
-		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.32.1",
+		"typescript-eslint": "^8.33.0",
 		"vite": "^6.3.5",
 		"vitest": "^3.1.4"
 	},
@@ -64,5 +47,24 @@
 			"@tailwindcss/oxide",
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"@iconify/svelte": "^5.0.0",
+		"@skeletonlabs/skeleton": "^3.1.3",
+		"@skeletonlabs/skeleton-svelte": "^1.2.3",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
+		"bits-ui": "^2.3.0",
+		"flexsearch": "^0.8.204",
+		"gray-matter": "^4.0.3",
+		"mdsvex": "^0.12.6",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
+		"remark-heading-id": "^1.0.1",
+		"shiki": "^3.4.2",
+		"svelte": "^5.33.7",
+		"tailwind-scrollbar": "^4.0.2",
+		"tailwindcss": "^4.1.8",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
