--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^2.0.0",
-		"@eslint/js": "^9.39.1",
+		"@eslint/js": "^9.39.2",
 		"@lzinga/mdsvex-enhanced-images": "^1.0.4",
 		"@playwright/test": "^1.57.0",
 		"@sveltejs/adapter-node": "^5.4.0",
@@ -32,7 +32,7 @@
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.2.9",
 		"@types/node": "^25.0.1",
-		"eslint": "^9.39.1",
+		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.13.1",
 		"globals": "^16.5.0",
@@ -56,11 +56,12 @@
 	"dependencies": {
 		"@fontsource-variable/noto-sans-thai": "^5.2.8",
 		"@iconify/svelte": "^5.1.0",
-		"@skeletonlabs/skeleton": "^4.7.4",
-		"@skeletonlabs/skeleton-svelte": "^4.7.4",
+		"@skeletonlabs/skeleton": "^4.8.0",
+		"@skeletonlabs/skeleton-svelte": "^4.8.0",
 		"@sveltejs/enhanced-img": "^0.9.2",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
+		"@vercel/analytics": "^1.6.1",
 		"bits-ui": "^2.14.4",
 		"flexsearch": "^0.8.212",
 		"gray-matter": "^4.0.3",
@@ -69,7 +70,7 @@
 		"rehype-slug": "^6.0.0",
 		"remark-heading-id": "^1.0.1",
 		"shiki": "^3.20.0",
-		"svelte": "^5.45.10",
+		"svelte": "^5.46.0",
 		"tailwind-scrollbar": "^4.0.2",
 		"tailwindcss": "^4.1.18",
 		"tailwindcss-animate": "^1.0.7"
